# pyrpc

./: .coverage  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/scripts/: bump_version.py  determine_bump.py
.github/workflows/: auto-version.yml  release.yml  version-bump.yml
docs/: index.md
docs/api/: client.md  router.md
docs/examples/: basic.md
docs/guides/: quickstart.md  router-types.md
examples/calculator/: README.md  client.py  models.py  server.py  server_django.py  server_flask.py
src/pyrpc/: __init__.py  client.py  context.py  core.py  integrations.py  typed_client.py  typed_router.py
src/pyrpc/integrations/: __init__.py  base.py  django_integration.py  fastapi_integration.py  flask_integration.py
tests/: __init__.py  conftest.py  test_client.py  test_http_status.py  test_integrations.py  test_router.py
