[build-system]
requires = [ "hatchling", "ruff",]
build-backend = "hatchling.build"

[project]
name = "pyrpc-ts"
version = "0.2.3"
description = "A type-safe RPC framework for Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [ "rpc", "api", "type-safe", "framework", "fastapi", "flask", "django",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Software Development :: Libraries :: Python Modules",]
dependencies = [ "pydantic>=2.5.2", "httpx>=0.25.2", "typing-extensions>=4.8.0", "uvicorn>=0.34.0", "ruff>=0.9.3",]
[[project.authors]]
name = "Armin Naimi"
email = "armin.naimi@gmail.com"

[project.optional-dependencies]
fastapi = [ "fastapi>=0.104.1", "uvicorn>=0.24.0",]
flask = [ "flask>=3.0.0",]
django = [ "django>=4.2.0",]
all = [ "fastapi>=0.104.1", "uvicorn>=0.24.0", "flask>=3.0.0", "django>=4.2.0",]
test = [ "pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "fastapi>=0.104.1", "flask>=3.0.0", "django>=4.2.0", "httpx>=0.25.2", "ruff>=0.3.0",]

[project.urls]
Homepage = "https://github.com/arminnaimi/pyrpc"
Documentation = "https://github.com/arminnaimi/pyrpc#readme"
Issues = "https://github.com/arminnaimi/pyrpc/issues"

[tool.ruff]
select = [ "E", "F", "I", "N", "B", "W", "C90",]
ignore = []
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = [ "pyrpc",]
combine-as-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=pyrpc --cov-report=term-missing"
testpaths = [ "tests",]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = [ "src",]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if TYPE_CHECKING:", "raise NotImplementedError",]

[tool.hatch.build.targets.wheel]
packages = [ "src/pyrpc",]
